create an API "create testCandidate"
