# docs/swagger.yaml
@@ -29,6 +29,23 @@ definitions:
     - point
     - test_id
     type: object
+  models.NotifyEmails:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      email:
+        type: string
+      id:
+        type: integer
+      testId:
+        type: integer
+      updatedAt:
+        type: string
+    required:
+    - email
+    type: object
   models.Question:
     properties:
       createdAt:
@@ -65,6 +82,66 @@ definitions:
     - name
     - points
     type: object
+  models.Test:
+    properties:
+      archived:
+        type: boolean
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      description:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      notifyEmails:
+        items:
+          $ref: '#/definitions/models.NotifyEmails'
+        type: array
+      passingScore:
+        type: integer
+      showScore:
+        type: boolean
+      test_questions:
+        items:
+          $ref: '#/definitions/models.TestQuestion'
+        type: array
+      testCondidat:
+        items:
+          $ref: '#/definitions/models.TestCondidat'
+        type: array
+      timingPolicy:
+        type: string
+      updatedAt:
+        type: string
+    required:
+    - archived
+    - description
+    - name
+    - passingScore
+    - showScore
+    - timingPolicy
+    type: object
+  models.TestCondidat:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
+        type: integer
+      question_id:
+        type: integer
+      test_id:
+        type: integer
+      updatedAt:
+        type: string
+    required:
+    - question_id
+    - test_id
+    type: object
   models.TestQuestion:
     properties:
       answer:
@@ -91,6 +168,7 @@ info:
   contact: {}
   description: is an application web of interview assessment tests for interviewing
     out of the box .
+  title: tekab-test
   version: "1.0"
 paths:
   /questions:
@@ -116,8 +194,6 @@ paths:
             items:
               $ref: '#/definitions/models.Question'
             type: array
-      security:
-      - Authorization: []
       summary: find a question
       tags:
       - question
@@ -140,8 +216,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Question'
-      security:
-      - Authorization: []
       summary: add new  question
       tags:
       - question
